--- a/styles.css
+++ b/styles.css
@@ -21,20 +21,6 @@ body {
     gap: 20px;
 }
 
-.grid-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 20px;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(4, 150px); /* Increased size of squares */
-    grid-template-rows: repeat(5, 150px); /* Increased size of squares */
-    gap: 10px;
-}
-
 .scoreboard-container {
     display: flex;
     flex-direction: column;
@@ -55,7 +41,7 @@ body {
 
 .turn-indicator {
     font-size: 1.2em;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .scoreboard {
@@ -66,11 +52,11 @@ body {
 
 .team {
     width: 150px;
-    height: 150px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5em;
+    font-size: 1.2em;
     color: white;
     border-radius: 10px;
 }
@@ -90,6 +76,19 @@ body {
 .team-card-4 {
     background-color: #ffff00; /* Yellow color */
     color: black;
+}
+
+.grid-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(4, 150px); /* Increased size of squares */
+    grid-template-rows: repeat(5, 150px); /* Increased size of squares */
+    gap: 10px;
 }
 
 .card {
