--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,33 @@
 body {
     font-family: 'Raleway', sans-serif;
-    text-align: center;
-    background-color: #e6f7ff; /* Light blue background */
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
+    padding: 20px;
+    background-color: #e6f7ff;
 }
 .grid {
     display: grid;
-    grid-template-columns: repeat(4, 150px); /* Adjust the number of columns as needed */
-    grid-template-rows: repeat(5, 150px); /* Adjust the number of rows based on your needs */
-    gap: 15px; /* Space between cards */
-    margin: 20px;
+    grid-template-columns: repeat(4, 150px);
+    gap: 15px;
+    margin: 0 auto;
 }
 .card {
-    width: 150px;
     height: 150px;
-    background-color: #cd5c5c; /* Card color when not flipped */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    cursor: pointer;
+    background-color: #cd5c5c;
     color: white;
-    border-radius: 8px; /* Rounded corners for cards */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Shadow for depth */
-    transition: background-color 0.3s; /* Smooth transition for color change */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 .card.flipped, .card.matched {
-    background-color: #90ee90; /* Color when flipped or matched */
+    background-color: #90ee90;
 }
 #sidebar {
+    padding: 10px;
     width: 200px;
-}
-#controls, #scoreboard, #turnIndicator {
-    margin-bottom: 20px;
 }
