--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,8 @@ body {
 
 #sidebar {
     width: 100%;
-    padding: 20px;
-    text-align: center;
+    padding: 40px;
+    text-align: left;
 }
 
 @media (min-width: 600px) {
