--- a/styles.css
+++ b/styles.css
@@ -122,16 +122,18 @@ body {
 
 
     
-#scoreboard div {
+#scoreboard .score {
     display: inline-block;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;  // Ensure text is vertically centered
+    width: 80px;
+    height: 80px;
+    margin: 10px;
+    padding: 5px;
+    background-color: #FF6347; /* Default, modify per team below */
     color: white;
     text-align: center;
-    margin: 0 10px;  // Space between score elements
-    border-radius: 5px;  // Rounded corners
-    background-color: #FF6347;  // Default color, in case class doesn't apply
+    vertical-align: middle;
+    border-radius: 5px;
+    font-size: 0.8rem;
 }
 
 #scoreboard .team1 { background-color: #FF6347; }  // Red
